--- a/Asset/CSS/search.html
+++ b/Asset/CSS/search.html
@@ -20,7 +20,7 @@
 
     <div class="full">
         <header>
-            <form class="signIn">
+            <form class="login">
                 <input type="text" id="emailInput" />
                 <input type="password" id="pwInput" />
                 <input type="submit" id="loginSubmit" />
@@ -30,16 +30,7 @@
 
 
         <main>
-            <div class="log">
-                <h1>Brew Master</h1>
-            </div>
-            <div class=search>
-                <form id="searchform">
-                    <input type="text" id="textInput" />
-                    <input type="submit" id="submitButton" />
 
-                </form>
-            </div>
 
         </main>
 
