--- a/search.html
+++ b/search.html
@@ -17,11 +17,10 @@
 </head>
 
 <body>
-    <H1>Hello World!xxxxxxxxxxx</H1>
+    <H1>Hello World!</H1>
     <div class="full">
         <header>
-            <!-- <img id="logo"
-                src="./Asset/IMG/kisspng-beer-glassware-oktoberfest-party-beer-party-yellow-stamp-5a720c66d397f2.4071229615174237188667 (1).png"> -->
+
             <form class="login">
                 <input type="text" id="emailInput" />
                 <input type="password" id="pwInput" />
@@ -61,33 +60,7 @@
                 </div>
             </div>
 
-            <!-- 
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="..." class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
-                    </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div> -->
+
 
 
 
