--- a/search.html
+++ b/search.html
@@ -17,7 +17,6 @@
 </head>
 
 <body>
-    <H1>Hello World!</H1>
     <div class="full">
         <header>
 
@@ -30,6 +29,17 @@
 
 
         <main>
+            <div class="container">
+                <div class="row mt-3">
+                    <div class="col-sm-12 text-center">
+                        <div class="text-center">
+                            <div class="logo text-center">
+                                <h1>Brew Masters</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="cardBody">
                 <div class="card mb-3">
                     <img src="..." class="card-img-top" alt="...">
@@ -59,27 +69,11 @@
                     </div>
                 </div>
             </div>
-
-
-
-
-
         </main>
         <footer></footer>
 
 
     </div>
-
-
-
-
-
-
-
-
-
-
-
 
     <!--------------JS from Bootstrap------------------------->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
