--- a/index.html
+++ b/index.html
@@ -17,91 +17,43 @@
 </head>
 
 <body>
+    <!-- **************** Option 3 signin button with drop down ****************-->
 
     <div class="full">
         <header>
-            <!-- **************** Option 1 simple **************** -->
-            <!-- <form class="signIn">
-                <input type="text" id="emailInput" />
-                <input type="password" id="pwInput" />
-                <input type="submit" id="loginSubmit" />
-            </form> -->
-
-            <!-- **************** Option 2 signin form in header **************** -->
-
-            <!-- <form>
-                <div class="form-group row">
-                    <div class="col-sm-4 offset-sm-8 col-md-3 offset-md-9 col-lg-3 offset-lg-9 ">
-                        <button type="submit" class="btn" id="sIn">Sign in</button>
-                        <a class="btn" href="#" role="button" id="sUp">Sign up</a>
-                    </div>
-                </div>
-            </form>
-
-            <form>
-                <div class="form-group row">
-                    <div class="col-sm-10 offset-sm-1 col-md-3 offset-md-9">
-                        <input type="text" class="form-control" id="userN" placeholder="Username">
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <div class="col-sm-10 offset-sm-1 col-md-3 offset-md-9">
-                        <input type="password" class="form-control" id="pW" placeholder="Password">
-                    </div>
-                </div>
-
-                <input type="submit" id="submit" />
-
-            </form>
-            <form>
-                <div class="form-group row">
-                    <div class="col-sm-4 offset-sm-8 col-md-3 offset-md-9">
-                        <button type="submit" class="btn btn-success" di="confirm">Confirm</button>
-                        <button type="submit" class="btn btn-secondary" id="cancel">Cancel</button>
-                    </div>
-                </div>
-            </form> -->
-
-            <!-- **************** Option 2 signin form in header **************** -->
-
-
-
-
-            <!-- **************** Option 3 signin button with drop down ****************-->
-            <div class="btn-group row">
-                <button class="btn btn-secondary btn-lg dropdown-toggle" type="button" id="sIn" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Sign In
-                </button>
-
-
-                <button class="btn btn-secondary btn-lg " href="#" type="button" id="sUp">
-                    Sign Up
-                </button>
-
-                <div class="dropdown-menu">
-                    <form>
-                        <div class="form-group row">
-                            <div class="col-sm-12">
-                                <input type="text" class="form-control" id="userN" placeholder="Username">
+            <div class="headerBtnContainer">
+                <div>
+                    <button class="btn btn-secondary btn-lg dropdown-toggle" type="button" id="sIn"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Sign In
+                    </button>
+                    <button class="btn btn-secondary btn-lg " href="#" type="button" id="sUp">
+                        Sign Up
+                    </button>
+                    <div class="dropdown-menu">
+                        <form>
+                            <div class="form-group row">
+                                <div class="col-sm-12">
+                                    <input type="text" class="form-control" id="userN" placeholder="Username">
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group row">
-                            <div class="col-sm-12">
-                                <input type="password" class="form-control" id="pW" placeholder="Password">
+                            <div class="form-group row">
+                                <div class="col-sm-12">
+                                    <input type="password" class="form-control" id="pW" placeholder="Password">
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group row">
-                            <div class="col-sm-12">
-                                <button type="submit" class="btn btn-success" di="confirm">Confirm</button>
-                                <button type="submit" class="btn btn-secondary" id="cancel">Cancel</button>
+                            <div class="form-group row">
+                                <div class="col-sm-12">
+                                    <button type="submit" class="btn btn-success" di="confirm">Confirm</button>
+                                    <button type="submit" class="btn btn-secondary" id="cancel">Cancel</button>
+                                </div>
                             </div>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
                 </div>
             </div>
         </header>
-        <!-- **************** Option 3 signin button with drop down ****************-->
+        <!-- **************** Main ****************-->
         <main>
             <div class="container">
                 <div class="row mt-3">
