slight design changes to verification and sign-up pages

--- a/verification.html
+++ b/verification.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!----------------Boot strap CSS----------------------->
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!--------------Google Fonts------------------------->
@@ -17,40 +16,37 @@
 </head>
 
 <body>
-
-    <main>
-        <div class="container">
-            <div class="row justify-content-md-center mt-5">
-                <div class="col-md-8 col-sm-12">
-                    <div class="row">
-                        <div class="container">
-                            <div class="card text-center">
-                                <h5 class="card-header verifyHearder">
-                                    Welcome to Brew Masters!
+    <div class="full">
+        <main>
+            <div class="container">
+                <div class="row justify-content-md-center mt-5">
+                    <div class="col-md-8 col-sm-12 ">
+                        <div class="card text-center border border-light">
+                            <h5 class="card-header verifyHearder">
+                                Welcome to Brew Masters!
+                            </h5>
+                            <div class="card-body verifyCard">
+                                <h5 class="card-title verify">Before proceeding, verify you are over 21 years
+                                    old
                                 </h5>
-                                <div class="card-body verifyCard">
-                                    <h5 class="card-title verify">Before proceeding, verify you are over 21 years
-                                        old
-                                    </h5>
-                                    <a href="index.html" class="btn btn-success btn-lg my-3 over21">Yes, I am! Take
-                                        me
-                                        to
-                                        your
-                                        site.</a>
-                                    <a href="https://www.cdc.gov/alcohol/fact-sheets/minimum-legal-drinking-age.htm"
-                                        class="btn btn-danger btn-lg my-3 under21">No, I will come back when I'm
-                                        older.</a>
-
-                                </div>
-                                <div class="card-footer verifyFooter">
-                                    Thanks for visiting, please drink resposibly!
-                                </div>
-                                <div class="copyright"> &copy; Brew Masters 2019</div>
+                                <a href="index.html" class="btn btn-success btn-lg my-3 over21">Yes, I am! Take
+                                    me
+                                    to
+                                    your
+                                    site.</a>
+                                <a href="https://www.cdc.gov/alcohol/fact-sheets/minimum-legal-drinking-age.htm"
+                                    class="btn btn-danger btn-lg my-3 under21">No, I will come back when I'm
+                                    older.</a>
                             </div>
+                            <div class="card-footer verifyFooter">
+                                Thanks for visiting, please drink resposibly!
+                            </div>
+                            <div class="copyright"> &copy; Brew Masters 2019</div>
                         </div>
+
                     </div>
-                </div>
-    </main>
+        </main>
+    </div>
     <!---------------- Jquery ----------------------->
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
