--- a/index.html
+++ b/index.html
@@ -67,10 +67,9 @@
                 </div>
             </div>
             <div class=search>
-                <form id="searchform">
+                <form id="searchform" action="search.html">
                     <input type="text" id="textInput" />
-                    <input type="submit" id="submitButton" />
-
+                    <a href="search.html" class="btn btn-success btn-sm mb-1 over21" id="submitButton">Submit</a>
                 </form>
             </div>
 
@@ -83,6 +82,10 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
+    <!---------------------Firebase-------------------------->
+    <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-database.js"></script>
 
     <!--------------JS from Bootstrap------------------------->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
