--- a/search.html
+++ b/search.html
@@ -17,19 +17,26 @@
 </head>
 
 <body>
-    <H1>Hello World!</H1>
     <div class="full">
         <header>
-
-            <form class="login">
-                <input type="text" id="emailInput" />
-                <input type="password" id="pwInput" />
-                <input type="submit" id="loginSubmit" />
-            </form>
+            <div>
+                <button class="btn logout " href="#" type="button" id="lOut">
+                    Log Out
+                </button>
+            </div>
         </header>
-
-
         <main>
+            <div class="container">
+                <div class="row mt-3">
+                    <div class="col-sm-12 text-center">
+                        <div class="text-center">
+                            <div class="logo text-center">
+                                <h1>Beer Near You</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="cardBody">
                 <div class="card mb-3">
                     <img src="..." class="card-img-top" alt="...">
@@ -59,27 +66,11 @@
                     </div>
                 </div>
             </div>
-
-
-
-
-
         </main>
         <footer></footer>
 
 
     </div>
-
-
-
-
-
-
-
-
-
-
-
 
     <!--------------JS from Bootstrap------------------------->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
