--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Sign In
                     </button>
-                    <button class="btn btn-secondary btn-lg " href="#" type="button" id="sUp">
+                    <button class="btn btn-secondary btn-lg " type="button" id="sUp">
                         Sign Up
                     </button>
                     <div class="dropdown-menu">
@@ -44,7 +44,7 @@
                             </div>
                             <div class="form-group row">
                                 <div class="col-sm-12">
-                                    <button type="submit" class="btn btn-success" di="confirm">Confirm</button>
+                                    <button type="submit" class="btn btn-success" id="confirm">Confirm</button>
                                     <button type="submit" class="btn btn-secondary" id="cancel">Cancel</button>
                                 </div>
                             </div>
@@ -54,8 +54,39 @@
             </div>
         </header>
         <!-- **************** Main ****************-->
+        <div class="full" id="verification">
+            <main>
+                <div class="container">
+                    <div class="row justify-content-md-center mt-5">
+                        <div class="col-md-8 col-sm-12 ">
+                            <div class="card text-center border border-light verified">
+                                <h5 class="card-header verifyHearder">
+                                    Welcome to Brew Masters!
+                                </h5>
+                                <div class="card-body verifyCard">
+                                    <h5 class="card-title verify">Before proceeding, verify you are over 21 years
+                                        old
+                                    </h5>
+                                    <a href="index.html" class="btn btn-success btn-lg my-3 over21">Yes, I am! Take
+                                        me
+                                        to
+                                        your
+                                        site.</a>
+                                    <a href="https://www.cdc.gov/alcohol/fact-sheets/minimum-legal-drinking-age.htm"
+                                        class="btn btn-danger btn-lg my-3 under21">No, I will come back when I'm
+                                        older.</a>
+                                </div>
+                                <div class="card-footer verifyFooter">
+                                    Thanks for visiting, please drink resposibly!
+                                </div>
+                                <div class="copyright"> &copy; Brew Masters 2019</div>
+                            </div>
+
+                        </div>
+            </main>
+        </div>
         <main>
-            <div class="container">
+            <div class="container" data-toggle="collapse" id="setup">
                 <div class="row mt-3">
                     <div class="col-sm-12 text-center">
                         <div class="text-center">
@@ -66,10 +97,10 @@
                     </div>
                 </div>
             </div>
-            <div class=search>
-                <form id="searchform" action="search.html">
+            <div class=search data-toggle="collapse">
+                <form id="searchform">
                     <input type="text" id="textInput" />
-                    <a href="search.html" class="btn btn-success btn-sm mb-1 over21" id="submitButton">Submit</a>
+                    <input type='submit' class="btn btn-success btn-sm mb-1 over21" id="submitButton" />
                 </form>
             </div>
 
