--- a/signUp.html
+++ b/signUp.html
@@ -141,7 +141,7 @@
                             </div>
                             <div class="container">
                                 <div class="row justify-content-center my-3">
-                                    <a href="index.html" class="btn btn-lg" id="register">Sign
+                                    <a class="btn btn-lg over21" id="register">Sign
                                         me
                                         up!</a>
                                 </div>
