--- a/search.html
+++ b/search.html
@@ -19,8 +19,8 @@
 <body>
     <div class="full">
         <header>
-            <div>
-                <button class="btn logout " href="#" type="button" id="lOut">
+            <div class="headerBtnContainer">
+                <button class="btn text-center border border-light" href="#" type="button" id="lOut">
                     Log Out
                 </button>
             </div>
