--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ git
                                 </div>
                             </div>
                             <div class="form-group row">
-                                <div class="col-sm-12">
+                                <div class="col-sm-12" id='loginForm'>
                                     <input type="password" class="form-control" id="pW" placeholder="Password">
                                 </div>
                             </div>
