--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
     <!---------------------Firebase-------------------------->
     <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-auth.js"></script>
 
     <!--------------JS from Bootstrap------------------------->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
