--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
                         <form>
                             <div class="form-group row">
                                 <div class="col-sm-12">
-                                    <input type="text" class="form-control" id="userN" placeholder="Username">
-                                </div>
+                                    <input type="email" class="form-control" id="userN" placeholder="Email"> </div>
                             </div>
                             <div class="form-group row">
                                 <div class="col-sm-12" id='loginForm'>
