--- a/search.html
+++ b/search.html
@@ -24,7 +24,6 @@
                     Log Out
                 </button>
             </div>
-
         </header>
         <main>
             <div class="container">
@@ -33,11 +32,16 @@
                         <div class="text-center">
                             <div class="logo text-center">
                                 <h1>Beer Near You</h1>
-
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class=searchpage data-toggle="collapse">
+                <form id="searchform">
+                    <input type="text" id="textInput" />
+                    <input type='submit' class="btn btn-success btn-sm mb-1 over21" id="submitButton" />
+                </form>
             </div>
             <div class="cardBody">
                 <div class="card mb-3">
