--- a/signUp.html
+++ b/signUp.html
@@ -46,7 +46,7 @@
                             </div>
                             <div class="form-group mt-3 formField">
                                 <label for="lastName">Date of Birth</label>
-                                <input type="lastName" class="form-control" id="lastName" placeholder="Date of Birth">
+                                <input type="lastName" class="form-control" id="dOb" placeholder="Date of Birth">
                             </div>
                             <div class="form-group formField">
                                 <div class="form-group mt-3 formField">
