--- a/signUp.html
+++ b/signUp.html
@@ -36,17 +36,16 @@
                             <div class="form-row">
                                 <div class="form-group col-md-6 mt-3 formField">
                                     <label for="firstName">First Name</label>
-                                    <input type="firstName" class="form-control" id="firstName"
-                                        placeholder="First Name">
+                                    <input type="text" class="form-control" id="firstName" placeholder="First Name">
                                 </div>
                                 <div class="form-group col-md-6 mt-3 formField">
                                     <label for="lastName">Last Name</label>
-                                    <input type="lastName" class="form-control" id="lastName" placeholder="Last Name">
+                                    <input type="text" class="form-control" id="lastName" placeholder="Last Name">
                                 </div>
                             </div>
-                            <div class="form-group mt-3 formField">
-                                <label for="lastName">Date of Birth</label>
-                                <input type="lastName" class="form-control" id="lastName" placeholder="Date of Birth">
+                            <div class="form-group formField">
+                                <label for="dob">Date of Birth</label>
+                                <input type="date" class="form-control" id="dob" placeholder="MM/DD/YYY">
                             </div>
                             <div class="form-group formField">
                                 <div class="form-group mt-3 formField">
