fixing search button

--- a/search.html
+++ b/search.html
@@ -37,11 +37,41 @@
                     </div>
                 </div>
             </div>
-            <div class=searchpage data-toggle="collapse">
-                <form id="searchform">
+            <!-- <div class=searchpage data-toggle="collapse"> -->
+            <!-- <form id="searchform">
                     <input type="text" id="textInput" />
                     <input type='submit' class="btn btn-success btn-sm mb-1 over21" id="submitButton" />
+                </form> -->
+            <div class=searchpage data-toggle="collapse">
+                <form id="searchform">
+                    <!-- fixing -->
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <button class="btn btn-outline-secondary dropdown-toggle" type="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Drink</button>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="#">Beer</a>
+                                <a class="dropdown-item" href="#">Wine</a>
+                                <a class="dropdown-item" href="#">Sake</a>
+                                <a class="dropdown-item" href="#">Wiskey</a>
+                            </div>
+                        </div>
+                        <input type="text" class="form-control" aria-label="Text input with dropdown button">
+                        <input type="text" class="form-control" aria-label="Text input with dropdown button">
+                        <button class="btn btn-outline-secondary " type="button" aria-haspopup="true"
+                            aria-expanded="false" id="submitButton">search</button>
+                    </div>
                 </form>
+                <!-- </div> -->
+
+
+
+
+
+
+
+
+
             </div>
             <div class="cardBody">
                 <div class="card mb-3">
