--- a/signUp.html
+++ b/signUp.html
@@ -60,7 +60,7 @@
                                 </div>
                                 <div class="form-group mt-3 formField">
                                     <label for="password">Password</label>
-                                    <input type="password" class="form-control" id="InputPwd" placeholder="Password">
+                                    <input type="password" class="form-control" id="pwSignUp" placeholder="Password">
                                     <small id="passwordHelpInline" class="form-text text-muted font-italic text-center">
                                         Must be 8-20 characters long.</small>
                                 </div>
