can now add users into the authentication and database

--- a/signUp.html
+++ b/signUp.html
@@ -49,7 +49,7 @@
 
                             </div>
                             <div class="form-group formField">
-                                <div class="form-group mt-3 formField">
+                                <div class="form-group mt-3 formField1">
                                     <label for="email">Email address</label>
                                     <input type="email" class="form-control" id="inputEmail"
                                         aria-describedby="emailHelp" placeholder="Enter email">
@@ -58,7 +58,7 @@
                                         share your
                                         email.</small>
                                 </div>
-                                <div class="form-group mt-3 formField">
+                                <div class="form-group mt-3 formField2">
                                     <label for="password">Password</label>
                                     <input type="password" class="form-control" id="pwSignUp" placeholder="Password">
                                     <small id="passwordHelpInline" class="form-text text-muted font-italic text-center">
