--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <!-- **************** Option 3 signin button with drop down ****************-->
 
-    <div class="full">
+    <div class="full" id="welcome">
         <header>
             <div class="headerBtnContainer">
                 <div>
@@ -136,9 +136,6 @@
     <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-auth.js"></script>
 
     <!--------------JS from Bootstrap------------------------->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
