--- a/signUp.html
+++ b/signUp.html
@@ -45,7 +45,7 @@
                             </div>
                             <div class="form-group formField">
                                 <label for="dob">Date of Birth</label>
-                                <input type="date" class="form-control" id="dob" placeholder="MM/DD/YYY">
+                                <input type="date" class="form-control text-muted" id="dob" placeholder="MM/DD/YYY">
 
                             </div>
                             <div class="form-group formField">
@@ -62,7 +62,7 @@
                                     <label for="password">Password</label>
                                     <input type="password" class="form-control" id="pwSignUp" placeholder="Password">
                                     <small id="passwordHelpInline" class="form-text text-muted font-italic text-center">
-                                        Must be 8-20 characters long.</small>
+                                        Must be at least 6 characters.</small>
                                 </div>
                             </div>
                             <div class="container">
