attempted to display error when failed to log in

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                 </div>
             </div>
         </header>
+        <div class="message"></div>
         <!-- **************** Main ****************-->
 
         <div class="full" id="verification">
