--- a/index.html
+++ b/index.html
@@ -107,14 +107,17 @@
                             <button class="btn btn-outline-secondary dropdown-toggle" type="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Drink</button>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Beer</a>
-                                <a class="dropdown-item" href="#">Wine</a>
-                                <a class="dropdown-item" href="#">Sake</a>
-                                <a class="dropdown-item" href="#">Wiskey</a>
+                                <a class="dropdown-item" data="Beer">Beer</a>
+                                <a class="dropdown-item" data="Wine">Wine</a>
+                                <a class="dropdown-item" data="Sake">Sake</a>
+                                <a class="dropdown-item" data="Whiskey">Wiskey</a>
                             </div>
                         </div>
+                        <!---->
+                        <!---->
                         <input type="text" class="form-control" aria-label="Text input with dropdown button">
-                        <input type="text" class="form-control" aria-label="Text input with dropdown button">
+                        <input type="text" class="form-control" aria-label="Text input with dropdown button"
+                            placeholder="City,State">
                         <button class="btn btn-outline-secondary " type="button" aria-haspopup="true"
                             aria-expanded="false" id="submitButton">search</button>
                     </div>
