--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!--------------Google Fonts------------------------->
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC:700&display=swap" rel="stylesheet">
-    <!--------------Our CSS------------------------->
+    <!-----------------Our CSS--------------------------->
     <link rel="stylesheet" href="./Asset/CSS/style.css">
     <title>Brewery Master</title>
 </head>
