added beer api and combined some search html with index.html

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
                     </div>
                 </div>
             </div>
+            <div class="headerBtnContainer">
+                <button class="btn text-center border border-light" type="button" id="lOut">
+                    Log Out
+                </button>
+            </div>
         </header>
         <div class="message"></div>
         <!-- **************** Main ****************-->
@@ -117,7 +122,7 @@
                         <!---->
                         <input type="text" class="form-control" aria-label="Text input with dropdown button">
                         <input type="text" class="form-control" aria-label="Text input with dropdown button"
-                            placeholder="City,State">
+                            placeholder="City,State" id="city">
                         <button class="btn btn-outline-secondary " type="button" aria-haspopup="true"
                             aria-expanded="false" id="submitButton">search</button>
                     </div>
