fixed the logout button bug showing every time we refresh

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </div>
                 </div>
             </div>
-            <div class="headerBtnContainer">
+            <div class="headerBtnContainer2">
                 <button class="btn text-center border border-light" type="button" id="lOut">
                     Log Out
                 </button>
