adding cancel button to sign up form

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                         to
                                         your
                                         site.</a>
-                                    <a href="https://www.cdc.gov/alcohol/fact-sheets/minimum-legal-drinking-age.htm"
+                                    <a href="https://www.chuckecheese.com/"
                                         class="btn btn-danger btn-lg my-3 under21">No, I will come back when I'm
                                         older.</a>
                                 </div>
