--- a/signUp.html
+++ b/signUp.html
@@ -67,9 +67,11 @@
                             </div>
                             <div class="container">
                                 <div class="row justify-content-center my-3">
-                                    <a href='index.html' class="btn btn-lg" id="register">Sign
+                                    <a href='index.html' class="btn btn-lg btn-success register">Sign
                                         me
                                         up!</a>
+                                    <a href='index.html' class="btn btn-lg ml-3 btn-danger maybeLater">Maybe
+                                        later</a>
                                 </div>
                             </div>
                         </form>
