--- a/index.html
+++ b/index.html
@@ -128,9 +128,11 @@
                     </div>
                 </form>
             </div>
-
-        </main>
-        <!-- **************** Main ****************-->
+            <div class="cardBody">
+            </div>
+    </div>
+    </main>
+    <!-- **************** Main ****************-->
 
 
     </div>
