--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <!-- fixing -->
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
-                            <button class="btn btn-outline-secondary dropdown-toggle" type="button"
+                            <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="Drink"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Drink</button>
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" data="Beer">Beer</a>
