--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                 <a class="dropdown-item" data="Beer">Beer</a>
                                 <a class="dropdown-item" data="Wine">Wine</a>
                                 <a class="dropdown-item" data="Sake">Sake</a>
-                                <a class="dropdown-item" data="Whiskey">Wiskey</a>
+                                <a class="dropdown-item" data="Whiskey">Whiskey</a>
                             </div>
                         </div>
                         <!---->
