put the search api into a function

--- a/index.html
+++ b/index.html
@@ -120,9 +120,10 @@
                         </div>
                         <!---->
                         <!---->
-                        <input type="text" class="form-control" aria-label="Text input with dropdown button">
                         <input type="text" class="form-control" aria-label="Text input with dropdown button"
-                            placeholder="City,State" id="city">
+                            id="searchAlc">
+                        <input type="text" class="form-control" aria-label="Text input with dropdown button"
+                            placeholder="Enter a City" id="city">
                         <button class="btn btn-outline-secondary " type="button" aria-haspopup="true"
                             aria-expanded="false" id="submitButton">search</button>
                     </div>
