--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" data="Beer">Beer</a>
                                 <a class="dropdown-item" data="Wine">Wine</a>
-                                <a class="dropdown-item" data="Sake">Sake</a>
+                                <a class="dropdown-item" data="Cocktail">Cocktail</a>
                                 <a class="dropdown-item" data="Whiskey">Whiskey</a>
                             </div>
                         </div>
