adding google maps

--- a/index.html
+++ b/index.html
@@ -129,8 +129,11 @@
                     </div>
                 </form>
             </div>
+            <div class="mapContainer" id="map">
+            </div>
             <div class="cardBody">
             </div>
+
     </div>
     </main>
     <!-- **************** Main ****************-->
@@ -155,9 +158,14 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
+    <!-- Google maps -->
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAMbxnspGWZx5c_sc4c2YgGURsIEVbtEG0&callback=initMap"
+        async defer></script>
     <!--------------------------------------->
 
     <script src="./Asset/JAVASCRIPT/app.js"></script>
+
 </body>
 
 </html>
