--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <title>Brewery Master</title>
 </head>
 
+
 <body>
     <!-- **************** Option 3 signin button with drop down ****************-->
 
@@ -114,7 +115,7 @@
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" data="Beer">Beer</a>
                                 <a class="dropdown-item" data="Wine">Wine</a>
-                                <a class="dropdown-item" data="Cocktail">Cocktail</a>
+                                <a class="dropdown-item" data="Cocktail">Sake</a>
                                 <a class="dropdown-item" data="Whiskey">Whiskey</a>
                             </div>
                         </div>
