--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <div class="headerBtnContainer2">
-                <button class="btn text-center border border-light" type="button" id="lOut">
+                <button class="btn btn-secondary btn-lg" type="button" id="lOut">
                     Log Out
                 </button>
             </div>
@@ -115,14 +115,14 @@
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" data="Beer">Beer</a>
                                 <a class="dropdown-item" data="Wine">Wine</a>
-                                <a class="dropdown-item" data="Cocktail">Sake</a>
+                                <a class="dropdown-item" data="Cocktail">Cocktail</a>
                                 <a class="dropdown-item" data="Whiskey">Whiskey</a>
                             </div>
                         </div>
                         <!---->
                         <!---->
-                        <input type="text" class="form-control" aria-label="Text input with dropdown button"
-                            id="searchAlc">
+                        <!-- <input type="text" class="form-control" aria-label="Text input with dropdown button"
+                            id="searchAlc"> -->
                         <input type="text" class="form-control" aria-label="Text input with dropdown button"
                             placeholder="Enter a City" id="city">
                         <button class="btn btn-outline-secondary " type="button" aria-haspopup="true"
