--- a/index.html
+++ b/index.html
@@ -130,9 +130,17 @@
                     </div>
                 </form>
             </div>
-            <div class="mapContainer" id="map">
-            </div>
-            <div class="cardBody">
+            <div class='content' id="content">
+                <div class='row'>
+                    <div class='col-md-8 col-sm-12'>
+                        <div class="cardBody">
+                        </div>
+                    </div>
+                    <div class='col-md-4 col-sm-12 '>
+                        <div class="mapContainer" id="map">
+                        </div>
+                    </div>
+                </div>
             </div>
 
     </div>
