Fixing Welcome, error msg in signin

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Sign In
                     </button>
-
                     <button class="btn btn-secondary btn-lg " type="button" id="sUp">
                         Sign Up
                     </button>
@@ -58,8 +57,16 @@
                     Log Out
                 </button>
             </div>
+
         </header>
-        <div class="message"></div>
+        <div class="row">
+            <!-- <div class=" right col-sm-12 offset-md-9 offset-lg-9"> -->
+            <div class="col-sm-12">
+                <div class="message"></div>
+            </div>
+        </div>
+
+
         <!-- **************** Main ****************-->
 
         <div class="full" id="verification">
