--- a/index.html
+++ b/index.html
@@ -139,18 +139,18 @@
             </div>
             <div class='content' id="content">
                 <div class='row'>
+                    <div class='col-md-7 col-sm-12' id="d">
+                        <!-- <div class='sticky-top'> -->
+                        <div class="mapContainer" id="map">
+                        </div>
+                    </div>
                     <div class='col-md-5 col-sm-12'>
                         <div class="cardBody">
                         </div>
                     </div>
-                    <div class='col-md-7 col-sm-12 '>
-                        <!-- <div class='sticky-top'> -->
-                        <div class="mapContainer" id="map">
-                        </div>
-                        <!-- </div> -->
-                    </div>
                 </div>
             </div>
+    </div>
     </div>
 
     </div>
