--- a/index.html
+++ b/index.html
@@ -137,23 +137,26 @@
                     </div>
                 </form>
             </div>
-            <div class='content' id="content">
-                <div class='row'>
-                    <div class='col-md-5 col-sm-12'>
-                        <div class="cardBody">
-                        </div>
-                    </div>
-                    <div class='col-md-7 col-sm-12' id="d">
-                        <div class="mapContainer" id="map">
-                        </div>
-                    </div>
+            <div class="main-container">
 
+
+                <div class='content' id="content">
+                    <div class='row'>
+                        <div class='col-md-6 col-sm-12 cardBox'>
+                            <div class="cardBody">
+                            </div>
+                        </div>
+                        <div class='col-md-6 col-sm-12 cardBox'>
+                            <div class="mapContainer" id="map">
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
             </div>
-    </div>
-    </div>
 
     </div>
+
     </main>
     <!-- **************** Main ****************-->
 
