--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                 <a class="dropdown-item" data="Beer">Beer</a>
                                 <a class="dropdown-item" data="Wine">Wine</a>
                                 <a class="dropdown-item" data="Sake">Sake</a>
-                                <a class="dropdown-item" data="Whiskey">Whiskey</a>
+                                <a class="dropdown-item" data="Whisky">Whisky</a>
                             </div>
                         </div>
                         <!---->
@@ -138,15 +138,13 @@
                 </form>
             </div>
             <div class="main-container">
-
-
                 <div class='content' id="content">
                     <div class='row'>
                         <div class='col-md-6 col-sm-12 cardBox'>
                             <div class="cardBody">
                             </div>
                         </div>
-                        <div class='col-md-6 col-sm-12 cardBox'>
+                        <div class='col-md-6 col-sm-12 cardBox mb-5'>
                             <div class="mapContainer" id="map">
                             </div>
                         </div>
