hid log in/ log out button

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                         to
                                         your
                                         site.</a>
-                                    <a href="https://www.chuckecheese.com/"
+                                    <a href="https://www.chuckecheese.com/" target="blank"
                                         class="btn btn-danger btn-lg my-3 under21">No, I will come back when I'm
                                         older.</a>
                                 </div>
