fixing bug where some buttons flickered upon hover

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <div class="form-group row">
                                 <div class="col-sm-12">
                                     <button type="submit" class="btn btn-success" id="confirm">Confirm</button>
-                                    <button type="submit" class="btn btn-secondary" id="cancel">Cancel</button>
+                                    <button type="submit" class="btn btn-danger" id="cancel">Cancel</button>
                                 </div>
                             </div>
                         </form>
