adding bootsrap alert after invalid create user

--- a/signUp.html
+++ b/signUp.html
@@ -70,8 +70,13 @@
                                     <a href='index.html' class="btn btn-lg btn-success register">Sign
                                         me
                                         up!</a>
+
                                     <a href='index.html' class="btn btn-lg ml-3 btn-danger maybeLater">Maybe
                                         later</a>
+                                </div>
+                                <div class="alert alert-danger text-center" id="invalidFormSubmission"
+                                    style="display:none;">
+                                    <strong>Error!</strong> Please fill out the entire form
                                 </div>
                             </div>
                         </form>
